wip: magic links, sdks
